--- a/styles/style.css
+++ b/styles/style.css
@@ -70,8 +70,8 @@
     color: #FFF;
     font-size: 18px;
     justify-content: center;
-    margin: 30px 0px 50px 0px ;
-    margin-left: 730px;
+    margin: 30px 30px 50px 80px ;
+    margin-left: 700px;
 }
 .header-img{
     padding-bottom: 20px;
@@ -266,6 +266,11 @@
         flex-direction: column;
         margin: -10px -100px 30px -220px;
     }
+    
+    /* .fetures{
+        flex-direction: column;
+        margin: 10px -100px 30px -420px;
+    } */
     .quick, .all-item{
         flex-direction: column;
         margin: 0px 0px 0px 0px;
